[gd_scene load_steps=15 format=3 uid="uid://coxkk35x4355w"]

[ext_resource type="Script" uid="uid://berlifd7e6dis" path="res://systems/save_system_ui.gd" id="1_bonas"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgurr"]
bg_color = Color(0.1640625, 0.086517334, 0.086517334, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lw47"]
bg_color = Color(0.017791748, 0.03401229, 0.20703125, 0)

[sub_resource type="FontFile" id="FontFile_bonas"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_6liry"]
font = SubResource("FontFile_bonas")
font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpw54"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwexd"]
bg_color = Color(0.11372549, 0.047058824, 0.047058824, 0.5294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4riq3"]
bg_color = Color(0.16796875, 0.045928955, 0.045928955, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_veaxa"]
bg_color = Color(0.26171875, 0.03578186, 0.03578186, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4x3yk"]
bg_color = Color(0.2578125, 0.064453125, 0.064453125, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77msc"]
bg_color = Color(0.16862746, 0.047058824, 0.047058824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gber"]
bg_color = Color(0.25882354, 0.0627451, 0.0627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nneva"]
bg_color = Color(0.16862746, 0.047058824, 0.047058824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvb0g"]
bg_color = Color(1, 1, 1, 1)

[node name="SaveSystem_UI" type="CanvasLayer"]
layer = 3
script = ExtResource("1_bonas")

[node name="SaveSystemUI_Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fgurr")

[node name="TextureRect" type="TextureRect" parent="SaveSystemUI_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="SaveSystemUI_HeaderPanel" type="Panel" parent="SaveSystemUI_Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 99.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6lw47")

[node name="RichTextLabel" type="RichTextLabel" parent="SaveSystemUI_Panel/SaveSystemUI_HeaderPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_title" type="Label" parent="SaveSystemUI_Panel/SaveSystemUI_HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -33.5
offset_right = 66.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "Load"
label_settings = SubResource("LabelSettings_6liry")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="Panel" parent="SaveSystemUI_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 119.0
offset_right = -19.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cpw54")

[node name="Panel-save1" type="Panel" parent="SaveSystemUI_Panel/VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = -463.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwexd")

[node name="btn_load" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -22.0
offset_right = 189.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_4riq3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Load"

[node name="btn_save" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save1"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -44.0
offset_right = 189.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_4x3yk")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Save"

[node name="Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save1"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 136.0
offset_bottom = 57.0

[node name="Location-Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save1"]
layout_mode = 1
offset_left = 1111.0
offset_right = 1240.0
offset_bottom = 50.0

[node name="Panel-save2" type="Panel" parent="SaveSystemUI_Panel/VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 182.0
offset_bottom = -275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwexd")

[node name="btn_load" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -24.0
offset_right = 189.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_77msc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Load"

[node name="btn_save" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save2"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -44.0
offset_right = 189.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0gber")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Save"

[node name="Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save2"]
layout_mode = 0
offset_left = 7.0
offset_right = 144.0
offset_bottom = 73.0

[node name="Location-Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save2"]
layout_mode = 1
offset_left = 1111.0
offset_right = 1240.0
offset_bottom = 50.0

[node name="Panel-save3" type="Panel" parent="SaveSystemUI_Panel/VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 366.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwexd")

[node name="btn_load" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -23.0
offset_right = 189.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_nneva")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Load"

[node name="btn_save" type="Button" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save3"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -44.0
offset_right = 189.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0gber")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_veaxa")
text = "Save"

[node name="Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save3"]
layout_mode = 0
offset_left = 7.0
offset_right = 170.0
offset_bottom = 73.0

[node name="Location-Label" type="Label" parent="SaveSystemUI_Panel/VBoxContainer/Panel-save3"]
layout_mode = 0
offset_left = 1077.0
offset_right = 1240.0
offset_bottom = 73.0

[node name="btn_return" type="Button" parent="SaveSystemUI_Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 23.0
offset_right = 157.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.16862746, 0.047058824, 0.047058824, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jvb0g")
text = "Return"
